Implemented SingleKeyXOR algothm and managed documentation for javadoc. * Now all important classes has their methods documented * SingleKeyXs working with all it's methods implemented * RepeatingXor implemented but lacking bruteforce still